// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders error message 1`] = `
<div
  className="root"
>
  Something went wrong.
</div>
`;

exports[`renders nothing when no error 1`] = `null`;

exports[`renders out of stock error message 1`] = `
<div
  className="root"
>
  <mock-FormattedMessage
    defaultMessage="An item in your cart is currently out-of-stock and must be removed in order to Checkout."
    id="stockStatusMessage.message"
  />
</div>
`;
